- Implemented rest input adapter - Create JacksonConfig to handle dates
